<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="com.example.inikolovski.mvpsampleproject.features.start.MainActivity">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/edt_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/edt_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>
</ScrollView>
